fix: headway text style/alignment and headways for no service - added a new FreeTextLine layout that provides spacing in between spans   which allows for the Headsign to the on the left and the headway   values to be on the right. Currently, this is only used for Partial Headway   Sections with a headway defined in order to match the new Headway   Rows. Full Headway Sections and Headway Sections with no headsign will   continue to be the same - also fixed an issue where No Service destinations were causing   Headways not to show up.

--- a/assets/css/dup/departures/time.scss
+++ b/assets/css/dup/departures/time.scss
@@ -1,4 +1,5 @@
 @use "CSS/colors";
+@use "../font";
 
 .departure-time {
   font-size: 138px;
@@ -44,7 +45,7 @@
 
 .departure-time__minutes-label {
   display: inline-block;
-  font-size: 0.729em;
+  font-size: font.$font-size-small-label;
   font-weight: 400;
   line-height: 1em;
 }
