--- a/assets/css/dup/free_text.scss
+++ b/assets/css/dup/free_text.scss
@@ -1,4 +1,5 @@
 @use "CSS/colors";
+@use "font";
 
 // General styles for free text / route pills
 .free-text {
@@ -135,7 +136,8 @@
 
 // Partial alert and one-line headway have similar styles
 .partial-alert,
-.headway-section--row {
+.headway-section--row,
+.headway-section--row_with_headsign {
   .free-text__line {
     width: 1608px;
     white-space: nowrap;
@@ -150,6 +152,33 @@
     height: 128px;
     padding-top: 40px;
     padding-bottom: 40px;
+  }
+}
+
+.headway-section--row_with_headsign {
+  .free-text__line {
+    display: flex;
+    align-items: center;
+  }
+
+  .free-text__line-container {
+    display: flex;
+  }
+
+  .free-text__line {
+    display: flex;
+    justify-content: space-between;
+    margin-right: 32px;
+  }
+
+  .free-text__string--bold {
+    font-size: 138px;
+    font-weight: 600;
+  }
+
+  .free-text__string--small {
+    font-size: font.$font-size-small-label;
+    font-weight: 400;
   }
 }
 
